# Dinner

./: .gitignore  CMakeLists.txt  dinner.cpp
lib/: eventLog.hpp  library.hpp
logger/: eventLog.hpp
philosopher/: philosopher.hpp
philosopher_and fork/: fork.hpp  philosopher.hpp
philosopher_and_fork/: fork.hpp  philosopher.hpp
src/: CMakeLists.txt  dinner.cpp  eventLog.cpp  eventLog.hpp  folk.cpp  fork.hpp  philosopher.hpp  protocol.hpp  waiter.hpp  waiter_with_queue.hpp
waiter/: unique_take.hpp  waiter.hpp  waiter_with_queue.hpp  waiter_without_queue.hpp
